# utbots_navigation

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.sh
YDLIDAR_ROS/launch/: X4.launch
YDLIDAR_ROS/startup/: initenv.sh
bridge_navigate_to_pose/: package.xml  setup.cfg  setup.py
hoverboard-driver-hestia/: arena_filtered.pgm  arena_filtered.yaml  arena_filtered_question_mark.pgm  arena_filtered_question_mark.yaml  ourt_map.pgm  ourt_map.yaml  pose.txt  testmap.pgm  testmap.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
launch/: move_base.launch
lidar_laser/: CMakeLists.txt  package.xml
lidar_laser/launch/: lidar_view.launch
log/: latest_build
mpu6050driver/: platformio.ini
nav_main/: CMakeLists.txt  rviz.rviz
nav_test/: CMakeLists.txt  package.xml  setup.py
utbots_nav/: CMakeLists.txt  README.md  arena_filled.pgm  package.xml
utbots_nav/launch/: hoverboard.launch.py  map.launch.py  nav.launch.py  rplidar.launch.py  utbots_mapping.launch.py  utbots_navigation.launch.py
utbots_nav/map/: arena.pgm  arena.yaml  arena_filled.pgm  arena_filled.yaml  arena_filled_waypoints.yaml  corredor0.yaml  corredor1.pgm  corredor1.yaml  corredor2.pgm  corredor2.yaml  corredor3.pgm  corredor3.yaml  pitaco.yaml  pitaco_waypoints.yaml  world_waypoints.yaml
utbots_nav/param/: box_filter.yaml  ekf_filter.yaml  hestia_nav.yaml
utbots_nav_utils/: README.md  package.xml  setup.cfg  setup.py
yaml/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
(+106 files in other folders)
